<resources>
    <string name="app_name">Aspro</string>
    <string name="firstName">Nome</string>
    <string name="lastName">Sobrenome</string>
    <string name="profession">Profissão</string>
    <string name="occupation">Ocupação</string>
    <string name="professional">Profissional</string>
    <string name="student_aspirant">Estudante/Aspirante</string>
    <string name="username">Nome de Usuário</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="confirmPassword">Confirmar Senha</string>
    <string name="birthday">Data de Nascimento</string>
    <string name="phone">Telefone</string>
    <string name="register">Cadastrar</string>
    <string name="fieldEmptyMsg">Estes campos não foram preenchidos: </string>
    <string name="confirmPasswordMsg">Confirmação de senha está incorreta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
